# kalshi-app

./: .dockerignore  .env.example  .gitignore  .kalshi_ws_ticker_scan.json  README.md  env.master.template  pyproject.toml  requirements.txt
azure-wrapper/: .env.azure.example  Dockerfile  KalshiBotWrapper.csproj  Program.cs  README.md  appsettings.json
azure-wrapper/Bot/: AutoSellLoop.cs  BacktestEngine.cs  EdgeMath.cs  Fees.cs  MarketData.cs  MarketScanner.cs  Metrics.cs  OrderExecution.cs  PaperEngine.cs  PortfolioService.cs  RiskManager.cs  Sizing.cs  Strategy.cs  TradeIntent.cs  TradingSettings.cs
azure-wrapper/Configuration/: BotConfiguration.cs
azure-wrapper/Dashboard/: DashboardStore.cs
azure-wrapper/Data/: BotControlsEntity.cs  BotDbContext.cs  BotRepository.cs  EventHistoryEntity.cs  PortfolioSeriesEntity.cs  SuggestionHistoryEntity.cs
azure-wrapper/Kalshi/: KalshiAuth.cs  KalshiModels.cs  KalshiRestClient.cs  KalshiWebSocketClient.cs
azure-wrapper/Services/: BotRunnerService.cs  BotTelemetryInitializer.cs
src/kalshi_bot/: __init__.py  __main__.py  auth.py  auto_sell.py  backtest.py  bet_history.py  bitcoin_runner.py  btc_price.py  client.py  config.py  confirmed_bets_db.py  crypto_watch.py  db.py  discover_runner.py  edge_math.py  execution.py  expectancy_report.py  fees.py  llm_runner.py  llm_screen.py  log_insights.py  logger.py  main.py  market_data.py  master_bot.py  metrics.py  momentum.py  monitor.py  paper_engine.py  portfolio.py  position_scale.py  position_watch.py  risk.py  runtime_controls.py  (+10 more)
tests/: test_risk.py  test_strategy.py
