[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-trading-bot"
version = "0.1.0"
description = "Educational Kalshi demo trading bot with risk controls and dry-run mode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kalshi_python_sync>=3.12.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "cryptography>=42.0.0",
    "tenacity>=8.2.0",
    "flask>=3.0.0",
]

[project.scripts]
kalshi-bot = "kalshi_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]
